@@ -3,6 +3,7 @@ Changes in Release 2.1.4
 [SIDP-340] - Default tc-config.xml causes TCNonPortableObjectError
 [SIDP-348] - Remove Terracotta Configuration from IdP Install
 [SIDP-249] - LoginContext is not removed from StorageService after Authentication Completes
+[SIDP-351] - Attribute resolution errors shouldn't prevent valid authn statement being returned
 
 Changes in Release 2.1.3
 =============================================
